; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_gif.c_gif_detach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_gif.c_gif_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.gif_softc* }
%struct.gif_softc = type { i32 }

@gif_mtx_grp = common dso_local global i32 0, align 4
@gif_cloner = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @gif_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gif_detach(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.gif_softc*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %4, i32 0, i32 0
  %6 = load %struct.gif_softc*, %struct.gif_softc** %5, align 8
  store %struct.gif_softc* %6, %struct.gif_softc** %3, align 8
  %7 = load %struct.gif_softc*, %struct.gif_softc** %3, align 8
  %8 = getelementptr inbounds %struct.gif_softc, %struct.gif_softc* %7, i32 0, i32 0
  %9 = load i32, i32* @gif_mtx_grp, align 4
  %10 = call i32 @lck_mtx_destroy(i32* %8, i32 %9)
  %11 = load %struct.gif_softc*, %struct.gif_softc** %3, align 8
  %12 = call i32 @if_clone_softc_deallocate(i32* @gif_cloner, %struct.gif_softc* %11)
  %13 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %14 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %13, i32 0, i32 0
  store %struct.gif_softc* null, %struct.gif_softc** %14, align 8
  %15 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %16 = call i32 @ifnet_release(%struct.ifnet* %15)
  ret void
}

declare dso_local i32 @lck_mtx_destroy(i32*, i32) #1

declare dso_local i32 @if_clone_softc_deallocate(i32*, %struct.gif_softc*) #1

declare dso_local i32 @ifnet_release(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
